Fix gaps in xlarge

--- a/style.css
+++ b/style.css
@@ -325,9 +325,9 @@ header {
     overflow: hidden;
 }
 
-#prj__documentation {
+/* #prj__documentation {
     background-image: url("https://github.com/elifaltundag/portfolio-website/blob/main/images/thumbnails/ss_on_screens/documentation_laptop.jpeg?raw=true");    
-}
+} */
 
 
 /*! -------------------- */
@@ -363,7 +363,7 @@ header {
 /*! CONTACT              */
 /*! -------------------- */
 #contact {
-    background-image: url("./images/contact/architecture_simple/andrei_bocan_xlarge_base.jpg");
+    background-image: url("");
     background-size: cover;
     background-position: left 30% center;
     background-repeat: no-repeat;
